fix overflow on game page

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,6 +34,7 @@ main.background {
   padding-block: 3rem 6rem;
   margin: 0;
   height: 100vh;
+  overflow-y: auto;
 }
 
 /* SKIP CONTENT*/
